# smock

./: .gitignore  CLAUDE.md  Makefile  README.md  api.md  auth.md  axioms.md  client-ui.md  comments.md  data-model.md  deploy.sh  dune-project  infrastructure.md  smock.service  technology.md
.archea/: project.toml
.axioms-freeze/: comments.md  data-model.md  infrastructure.md
.claude/commands/: axioms-sync.md
.claude/skills/idesign-architecture/: SKILL.md
.claude/skills/smock-api/: SKILL.md
.claude/skills/well/: SKILL.md
.gitea/workflows/: deploy.yml
_generated/: CLAUDE.md  deploy.sh  dune-project  package.json  playwright.config.ts  smock.service  tsconfig.json
_generated/dune.lock/: conf-zlib.1.pkg  lock.dune
_generated/e2e/: comments.spec.ts
_generated/lib/: app.ml  events.ml
_generated/static/: app.css  dune  mock-viewer.js
_generated/static/ts/: mock-viewer.ts
_generated/test/: smock_test.ml
axioms/: admin-ui.md  ai-chat.md  api.md  auth.md  client-ui.md  comment-access.md  comments.md  data-model.md  infrastructure.md  main.md  mock-builder.md  mocks.md  projects.md  technology.md
code/: .ocamlformat  Makefile  deploy.sh  dune  dune-project  package-lock.json  package.json  playwright.config.ts  tsconfig.json
code/dune.lock/: camlzip.1.14.pkg  lock.dune  well.dev.pkg
code/e2e/: comments.spec.ts
code/lib/: app.ml  dune  events.ml
code/lib/client/: api_auth.ml  s3_storage.ml  slug.ml  template_processor.ml
code/lib/client/pages/: ai_routes.ml  api_routes.ml  builder_page.mlx  client_mock_page.mlx  client_project_page.mlx  home_page.mlx  login_page.mlx  project_page.mlx
code/lib/client/widgets/: layout.mlx
code/lib/comment_access/: comment_access_impl.ml
code/lib/contract/: CommentAccess.toml  MockAccess.toml
code/lib/mock_access/: mock_access_impl.ml
code/lib/mock_manager/: mock_manager_impl.ml
code/static/: app.css  dune  mock-viewer.js  smock-ai-chat.js  smock-comments.js  well.ts
code/static/ts/: mock-viewer.ts  smock-ai-chat.ts  smock-comments.ts
code/test/: smock_test.ml
code/tests/: test-axioms.sh
docs/: plan.md
dune.lock/: conf-zlib.1.pkg  lock.dune  well.dev.pkg
lib/: app.ml
lib/client/: api_auth.ml  s3_storage.ml  template_processor.ml
lib/comment_access/: comment_access_impl.ml
lib/contract/: ProjectAccess.toml  dune
lib/project_access/: project_access_impl.ml
static/: app.css  mock-viewer.js  well.js  well.ts
static/ts/: mock-viewer.ts
test/: dune  smock_test.ml
(+31 files in other folders)
