(lang dune 3.17)
; @axiom: infrastructure.md#system-budowania

(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (merlin_reader mlx)
  (preprocess
   (run mlx-pp %{input-file}))))

(pin
 (url "git+https://github.com/finalclass/well.git")
 (package (name well)))

(package
 (name smock)
 (version 0.0.1)
 (allow_empty)
 (synopsis "A well web application")
 (depends
  (ocaml (>= 5.4))
  mlx
  well
  eio
  eio_main
  yojson
  sqlite3
  ppx_deriving_yojson
  mirage-crypto-rng-eio))
; /@axiom: infrastructure.md#system-budowania
