; @axiom: infrastructure.md#system-budowania
; TypeScript -> JavaScript (auto-promoted to source tree on build)
; Requires bun — install from https://bun.sh
(rule
 (targets well.js)
 (deps (file well.ts))
 (mode promote)
 (action (run bun build well.ts --outdir . --minify)))

(rule
 (targets mock-viewer.js)
 (deps
  (source_tree ts)
  (source_tree ../lib/contract/build/ts))
 (mode promote)
 (action (run bun build ts/mock-viewer.ts --outdir . --minify)))

(rule
 (targets smock-comments.js)
 (deps
  (source_tree ts)
  (source_tree ../lib/contract/build/ts))
 (mode promote)
 (action (run bun build ts/smock-comments.ts --outdir . --minify)))

; @axiom: mock-builder.md#kompilacja-smock-ai-chatts
(rule
 (targets smock-ai-chat.js)
 (deps
  (source_tree ts)
  (source_tree ../lib/contract/build/ts))
 (mode promote)
 (action (run bun build ts/smock-ai-chat.ts --outdir . --minify)))
; /@axiom: mock-builder.md#kompilacja-smock-ai-chatts
; /@axiom: infrastructure.md#system-budowania
